Fix the location events info

--- a/src/app/components/students/dashboard/edit-event/edit-event.component.html
+++ b/src/app/components/students/dashboard/edit-event/edit-event.component.html
@@ -49,7 +49,7 @@
 
         <div>
             <h5 class="mb-1">Lugar del evento: </h5>
-            <h3>{{ event.details }}</h3>
+            <h3>{{ event.location }}</h3>
         </div>
     </mat-expansion-panel>
 
