Set to 250px the mat divider

--- a/src/app/components/administrator/administrator.component.css
+++ b/src/app/components/administrator/administrator.component.css
@@ -58,6 +58,7 @@ mat-toolbar .icon {
   flex-direction: column;
   justify-content: center;
   font-size: smaller;
+  width: 250px;
 }
 
 mat-toolbar span {
