Set the correct path to the configurations

--- a/src/app/components/judges/dashboard/top-menu/top-menu.component.html
+++ b/src/app/components/judges/dashboard/top-menu/top-menu.component.html
@@ -25,7 +25,7 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item routerLink="/administrator/settings">
+            <button mat-menu-item routerLink="/judges/settings">
               <mat-icon>settings</mat-icon>
               <span>Configuraciones</span>
             </button>
