Fix forget and reset password validations

--- a/src/app/components/admin/auth/reset-password/reset-password.component.html
+++ b/src/app/components/admin/auth/reset-password/reset-password.component.html
@@ -6,17 +6,23 @@
             <mat-label>Nueva contraseña</mat-label>
             <input type="password" matInput formControlName="NewPasswordFormControl">
             <mat-error *ngIf="ResetPasswordForm.controls['NewPasswordFormControl']">
-                Contraseña debe tener al menos 8 caracteres, un carácter numérico, una mayúscula y un carácter especial
+                Nueva contraseña debe tener al menos 8 caracteres, un carácter numérico, una mayúscula y un carácter especial
             </mat-error>
         </mat-form-field>
         <div style="padding: 0.5rem;"></div>
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Confirmación de nueva contraseña</mat-label>
             <input type="password" matInput formControlName="ConfirmPasswordFormControl">
-            <mat-error *ngIf="ResetPasswordForm.controls['ConfirmPasswordFormControl'] != ResetPasswordForm.controls['NewPasswordFormControl']">
-                Confirmación de nueva contraseña debe ser igual a nueva contraseña
+            <mat-error *ngIf="ResetPasswordForm.controls['ConfirmPasswordFormControl']">
+                Confirmación de nueva contraseña debe tener al menos 8 caracteres, un carácter numérico, una mayúscula y un carácter especial
             </mat-error>
         </mat-form-field>
+        <div>
+            <mat-error *ngIf="ResetPasswordForm.controls['ConfirmPasswordFormControl'].value != ResetPasswordForm.controls['NewPasswordFormControl'].value
+            && ResetPasswordForm.controls['NewPasswordFormControl'].value != ResetPasswordForm.controls['ConfirmPasswordFormControl'].value">
+                Confirmación de nueva contraseña debe ser igual a nueva contraseña
+            </mat-error>
+        </div>
       </div>
       <button id="sumbit-button" type="submit" class="" mat-raised-button color="primary">Actualizar Contraseña</button>
     </form>
