Fix new mat error css

--- a/src/app/components/admin/auth/reset-password/reset-password.component.html
+++ b/src/app/components/admin/auth/reset-password/reset-password.component.html
@@ -17,7 +17,7 @@
                 Confirmación de nueva contraseña debe tener al menos 8 caracteres, un carácter numérico, una mayúscula y un carácter especial
             </mat-error>
         </mat-form-field>
-        <div>
+        <div class="flex-container"> 
             <mat-error *ngIf="ResetPasswordForm.controls['ConfirmPasswordFormControl'].value != ResetPasswordForm.controls['NewPasswordFormControl'].value
             && ResetPasswordForm.controls['NewPasswordFormControl'].value != ResetPasswordForm.controls['ConfirmPasswordFormControl'].value">
                 Confirmación de nueva contraseña debe ser igual a nueva contraseña
