--- a/src/app/components/administrator/dashboard/settings/reset-password/reset-password.component.html
+++ b/src/app/components/administrator/dashboard/settings/reset-password/reset-password.component.html
@@ -20,8 +20,8 @@
                     Confirmación de nueva contraseña debe tener al menos 8 caracteres, un carácter numérico, una mayúscula y un carácter especial
                 </mat-error>
             </mat-form-field>
-            <div>
-                <mat-error *ngIf="ResetPasswordForm.controls['ConfirmPasswordFormControl'].value != ResetPasswordForm.controls['NewPasswordFormControl'].value
+            <div style="padding: 0.5rem;">
+                <mat-error style="margin: 2.0rem;" *ngIf="ResetPasswordForm.controls['ConfirmPasswordFormControl'].value != ResetPasswordForm.controls['NewPasswordFormControl'].value
                 && ResetPasswordForm.controls['NewPasswordFormControl'].value != ResetPasswordForm.controls['ConfirmPasswordFormControl'].value">
                     Confirmación de nueva contraseña debe ser igual a nueva contraseña
                 </mat-error>
