Change the name of the button

--- a/src/app/components/administrator/dashboard/fair-kind-events/fair-kind-events.component.html
+++ b/src/app/components/administrator/dashboard/fair-kind-events/fair-kind-events.component.html
@@ -3,7 +3,7 @@
         <h1>Tipos de eventos de la Feria</h1>
         <div class="sub-container">
             <form class="example-form">
-            <button mat-raised-button class="add-button" (click)="addKindEvents()">Agregar</button>
+            <button mat-raised-button class="add-button" (click)="addKindEvents()">Agregar tipo de evento</button>
         </form>
         </div>
     </div>
