Show password feature

--- a/src/app/components/admin/auth/login/login.component.css
+++ b/src/app/components/admin/auth/login/login.component.css
@@ -53,3 +53,12 @@ re-captcha.is-invalid > div {
 	border: 1px solid #dc3545 !important;
 	border-radius: 0.2rem;
   }
+
+.showPassword{
+    opacity: 0.3;
+    cursor: pointer;
+}
+
+.showPassword:hover{
+    opacity: 0.8;
+}
