Change the color of Create Fair button and fix the pop up message title

--- a/src/app/components/administrator/administrator.component.css
+++ b/src/app/components/administrator/administrator.component.css
@@ -27,8 +27,8 @@ mat-toolbar .flexbox-container {
   height: 3rem;
   padding: 0 1rem;
   color: #FFFFFF;
-  border-color: rgb(168, 56, 93);
-  background-color: rgb(168, 56, 93);
+  border-color: #354f52;
+  background-color: #354f52;
   border-radius: 4px;
 }
 
