--- a/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-students/manage-students.component.html
@@ -14,10 +14,10 @@
     </div>
     <div class="users-content">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <ng-container matColumnDef="userId">
+            <!-- <ng-container matColumnDef="userId">
                 <th mat-header-cell *matHeaderCellDef> Cédula </th>
                 <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
-            </ng-container>
+            </ng-container> -->
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Nombre </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -36,7 +36,7 @@
             </ng-container>
             <!--Buttons-->
             <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef></th>
+                <th mat-header-cell *matHeaderCellDef> Opciones </th>
                 <td mat-cell *matCellDef="let element">
                     <mat-icon class="btn-edit" [routerLink]="['/administrator/edit-students', element.email]">border_color</mat-icon>
                     <mat-icon (click)="dialogDelete(element.email)" class="btn-delete">clear</mat-icon>
