Enhance some hmtl and css code and fix a pop up error

--- a/src/app/components/students/dashboard/project-details/project-details.component.html
+++ b/src/app/components/students/dashboard/project-details/project-details.component.html
@@ -24,7 +24,7 @@
     <mat-divider vertical style="height:85%; margin: 0 5%;"></mat-divider>
     <div class="right-side">
         <div class="section-title">
-            <mat-icon>group</mat-icon>
+            <mat-icon>done</mat-icon>
             <div class="title">
                 <h2>Detalles de la calificación</h2>
             </div>
