--- a/src/app/components/admin/auth/login/login.component.css
+++ b/src/app/components/admin/auth/login/login.component.css
@@ -57,6 +57,7 @@ re-captcha.is-invalid > div {
 .showPassword{
     opacity: 0.3;
     cursor: pointer;
+    margin-right: 8px;
 }
 
 .showPassword:hover{
